# r2-browser

./: .gitignore  DEBUGGING.md  DEVELOPMENT.md  README.md  SECURITY.md  SECURITY_FILES.md  commit-message.txt  package-lock.json  package.json  setup.sh
.github/workflows/: kiro-badges.yml
.kiro/badges/: auth-testing-badge-data.json  badge-data-all.json  enhance-security-posture-badge-data.json  file-upload-functionality-badge-data.json  fresh-fun-ui-redesign-badge-data.json  r2-file-explorer-badge-data.json
.kiro/hooks/: auto-commit-spec.kiro.hook  auto-commit-task.kiro.hook  kiro-git-sync.kiro.hook
.kiro/specs/auth-testing/: design.md  tasks.md  (+1 more)
.kiro/steering/: structure.md  tech.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
worker/: .dev copy.vars  .dev.vars.example  .env.example  Cargo.toml  ENCRYPTION_SETUP.md  SETUP.md  TESTING.md  debug.js  folder-test.txt  package-lock.json  package.json  test-file.txt  tsconfig.json  vitest.config.ts  wrangler.toml
worker/scripts/: setup-secrets.ps1  setup-secrets.sh
worker/src/: index.js  index.ts  integration.test.ts  lib.rs
worker/src/handlers/: analytics.ts  auth.test.ts  auth.ts
worker/src/middleware/: auth.test.ts  auth.ts  error-handler.ts
worker/src/services/: auth.test.ts  auth.ts  credential-encryption.test.ts  credential-encryption.ts  master-key-manager.test.ts  master-key-manager.ts  r2.test.ts  r2.ts
worker/src/types/: index.ts
worker/src/utils/: error-handler.ts  index.ts  logger.ts
(+60 files in other folders)
